--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
-version scroogeVersion
+version pluginVersion
 group 'io.github.balookrd'
 
 gradlePlugin {
